microapp-k8s/k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: microapp
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: api
  type: ClusterIP
