microapp-k8s/k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: microapp
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: db
  type: ClusterIP
