microapp-k8s/k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: microapp
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: web
  type: ClusterIP
